# arjson

./: .gitignore  CONTRIBUTING.md  README.md  WEAVEPACK.md  arjson-limitations-report.md  package-lock.json
.github/workflows/: conformance.yml
arpack/: ROADMAP.md
docs/: README.md  benchmarks.md  comparison.md  delta-chains.md  format.md  fuzz-testing.md  strmap-as-dictionary.md  test-architecture.md
impl/python/: README.md  conformance.py  conformance_ast.py  conformance_graph.py  conformance_log.py  conformance_tabular.py  conformance_tensor.py  conformance_wire.py  test_chain.py  test_delta_from_prior.py  test_encode_delta.py  test_skip_load.py
impl/rust/: Cargo.toml
impl/rust/weavepack-tabular/: Cargo.toml
impl/rust/weavepack-tabular/src/: apply.rs  decode.rs  encode.rs  lib.rs  types.rs
impl/rust/weavepack-tensor/: Cargo.toml  README.md
impl/rust/weavepack-tensor-py/: Cargo.toml  README.md  pyproject.toml  test_conformance.py
impl/rust/weavepack-tensor-py/src/: lib.rs
impl/rust/weavepack-tensor/src/: bits.rs  decode.rs  delta.rs  encode.rs  fp8_dtype.rs  half_dtype.rs  lib.rs  schema.rs  types.rs
sdk/: make.js  package-lock.json  package.json
sdk/src/: arjson.js  artable.js  builder.js  decoder.js  dispatch.js  encoder.js  index.js  utils.js
sdk/src-fixed/: artable.js  builder.js  decoder.js  encoder.js  utils.js
sdk/test/: api.test.js  ast-profile.test.js  bench-beat-json-brotli.js  bench-compress.js  bench-worker.js  bench-workloads.js  bench.js  brackets.test.js  delta-invariants.test.js  delta.js  dispatch.test.js  edge-cases.js  fuzz-stress.js  (+22 more)
weavepack/: FAQ.md  PHASE-3-PLAN.md  ROADMAP.md  TROUBLESHOOTING.md  V0.2-PLANNING.md  V0.3-PLANNING.md  V0.4-PLANNING.md  V0.5-PLANNING.md  V0.6-PLANNING.md  V0.7-PLANNING.md  V0.8-PLANNING.md
(+331 files in other folders)
