[package]
name = "weavepack-tabular"
version = "0.1.0"
edition = "2021"
description = "weavepack-tabular profile — Rust reference implementation"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

[[bin]]
name = "conformance"
path = "src/bin/conformance.rs"
