[package]
name = "weavepack-tensor"
version = "0.1.0"
edition = "2021"
description = "weavepack-tensor profile — Rust reference implementation"
license = "MIT"

[dependencies]
weavepack-core = { path = "../weavepack-core" }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
half = "2"

[dev-dependencies]
hex = "0.4"

[[bin]]
name = "conformance"
path = "src/bin/conformance.rs"
